feat: complete enterprise architecture deployable via docker-compose