@@ -2,23 +2,26 @@ package org.lumatrace.cloud.lumatrace;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
+import com.fasterxml.jackson.databind.MapperFeature;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 
 import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
 
-public class LumaTraceCanonicalizer {
+public final class LumaTraceCanonicalizer {
 
-    // Registramos el módulo de fechas para que entienda LocalDateTime
     private static final ObjectMapper MAPPER = new ObjectMapper()
-            .registerModule(new JavaTimeModule()) // <--- ESTA ES LA LÍNEA QUE FALTABA
+            .registerModule(new JavaTimeModule())
+            .enable(MapperFeature.SORT_PROPERTIES_ALPHABETICALLY)
             .disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS);
+
+    private LumaTraceCanonicalizer() {}
 
     public static String toCanonicalJson(LumaTraceManifest manifest) {
         try {
             return MAPPER.writeValueAsString(manifest);
         } catch (Exception e) {
-            throw new RuntimeException("Failed to serialize manifest", e);
+            throw new IllegalStateException("Canonical serialization failed", e);
         }
     }
 
@@ -29,12 +32,12 @@ public class LumaTraceCanonicalizer {
 
             StringBuilder sb = new StringBuilder();
             for (byte b : hash) {
-                sb.append(String.format("%02x", b));
+                sb.append("%02x".formatted(b));
             }
             return sb.toString();
 
         } catch (Exception e) {
-            throw new RuntimeException("Hashing failed", e);
+            throw new IllegalStateException("Hashing failed", e);
         }
     }
 }
